# ariitk_auto_landing

./: CMakeLists.txt  README.md  cir_traj.cpp  def.cpp  package.xml  template_ros.hpp  trajectory_headers.hpp
auto_landing/: CMakeLists.txt  package.xml
auto_landing/auto_landing/: husky_trajectory.hpp
auto_landing/cfg/: camera_params.yaml  detect_platform_params.yaml  fixed_trajectory.yaml  husky_trajectory_params.yaml  landing_params.yaml  platform_trajectory_params.yaml  trajectory_parameters.yaml
auto_landing/include/: landing.hpp  tracking.hpp
auto_landing/include/auto_landing/: detect_platform.hpp  eight_shape_traj.hpp  fixed_trajectory_publisher.hpp  husky_trajectory.hpp  landing.hpp  platform_trajectory.hpp  pose.hpp  tracking.hpp  trajectory_generation_tracker.hpp  trajectory_publisher_visualizer.hpp  trajectory_test.hpp
auto_landing/launch/: auto.launch  autonomous_landing_sim.launch  custom_control.launch  custom_description.launch  fixed_trajectory.launch  mov.launch  platform_detect.launch  pose.launch  publisher.launch  spawn_custom_husky.launch  tracker.launch  visualizer.launch  world_setup.launch
auto_landing/meshes/: custom_top_plate.dae
auto_landing/models/: mav_with_camera.gazebo  mav_with_camera_and_wind.gazebo
auto_landing/rqt/: node_monitor.perspective
auto_landing/rviz/: trajectory_visualizer.rviz
auto_landing/src/: detect_platform.cpp  detect_platform_node.cpp  eight_shape_traj.cpp  eight_shape_traj_node.cpp  fixed_trajectory_publisher.cpp  fixed_trajectory_publisher_node.cpp  husky_trajectory.cpp  husky_trajectory_node.cpp  landing.cpp  landing_node.cpp  platform_trajectory.cpp  platform_trajectory_node.cpp  pose.cpp  pose_node.cpp  run_trajectory_test.cpp  tracking.cpp  tracking_node.cpp  trajectory_generation_tracker.cpp  trajectory_generation_tracker_node.cpp  trajectory_publisher_visualizer.cpp  trajectory_publisher_visualizer_node.cpp  trajectory_test.cpp
auto_landing/urdf/: custom_husky.urdf.xacro  decorations.urdf.xacro
config/: params.yaml
detection/: CMakeLists.txt  package.xml
detection/include/: detect_platform.hpp
detection/include/detection/: detect_platform.hpp
detection/launch/: platform_detect.launch
detection/rqt/: detection.perspective
detection/src/: detect_platform.cpp  detect_platform_node.cpp
gui_rosos/: CMakeLists.txt  package.xml
gui_rosos/src/: ROS_GUI.py
include/: trajectory_headers.hpp
install/: install_https.rosinstall  install_ssh.rosinstall
launch/: mov.launch
lib_package/: CMakeLists.txt  package.xml
msg_package/: CMakeLists.txt  package.xml
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/cfg/: pose_estimation_parameters.yaml
pose_estimation/include/pose_estimation/: pose.hpp
pose_estimation/launch/: pose.launch  pose_estimation.launch
pose_estimation/src/: pose.cpp  pose_node.cpp  pose_z_known.cpp
pose_estimation_ros/: CMakeLists.txt  package.xml
pose_estimation_ros/cfg/: pose_estimation_parameters.yaml
pose_estimation_ros/include/pose_estimation/: pose.hpp
pose_estimation_ros/include/pose_estimation_ros/: pose_estimation_ros.hpp
pose_estimation_ros/launch/: pose_estimation.launch
pose_estimation_ros/src/: pose.cpp  pose_estimation_ros.cpp  pose_estimation_ros_node.cpp  pose_node.cpp
qt_interface/: CMakeLists.txt  package.xml
qt_interface/launch/: qt_interface.launch
qt_interface/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tracking/: CMakeLists.txt  package.xml
tracking/cfg/: tracking_parameters.yaml  trajectory_parameters.yaml
tracking/include/: trajectory_generation_tracker.hpp
tracking/include/tracking/: tracking.hpp  trajectory_generation_tracker.hpp
tracking/launch/: tracker.launch  tracker_sim.launch
tracking/src/: tracking.cpp  tracking_node.cpp  trajectory_generation_tracker.cpp  trajectory_generation_tracker_node.cpp
user_interface/: CMakeLists.txt  package.xml
user_interface/launch/: user_interface.launch
user_interface/src/: user_interface.cpp
