<?xml version="1.0"?>
<package format="2">
  <name>auto_landing</name>
  <version>0.0.0</version>
  <description>The auto_landing package</description>
  
  <maintainer email="sanjayso@iitk.ac.in">Sanjay Sukumaran</maintainer>
  <maintainer email="varunk@iitk.ac.in">varun khatri</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  
</package>

