<?xml version="1.0"?>
<package format="2">
  <name>gui_rosos</name>
  <version>0.0.0</version>
  <description>The gui_rosos package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="varunk@iitk.ac.in">varun khatri</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>rosbuild</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>python-qt5-bindings</depend>
  <!-- <depend condition="$ROS_PYTHON_VERSION == 3">python3-qt5-bindings</depend> -->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
