<?xml version="1.0"?>
<package format="2">
  <name>tracking</name>
  <version>0.0.0</version>
  <description>The tracking package</description>

  <maintainer email="kabeer@iitk.ac.in">Kshitij Kabeer</maintainer>
  <maintainer email="sanjayso@iitk.ac.in">Sanjay Sukumaran</maintainer>
  <maintainer email="varunk@iitk.ac.in">Varun Khatri</maintainer>

  <license>GNU GPL v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

</package>
